<resources>
    <string name="app_name">FinTooDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="who_is_this_investment_for">Who is this investment for?*</string>
    <string name="is_the_equity_one_time_or_recurring">Is the equity one time or recurring ?</string>
    <string name="date_of_purchase">Date of purchase</string>
    <string name="fixed">Fixed</string>
    <string name="variable">Variable</string>
    <string name="number_of_units">Number of units</string>
    <string name="purchase_price">Purchase price</string>
    <string name="add_more">Add more</string>
</resources>